--- a/bitOperators/index.html
+++ b/bitOperators/index.html
@@ -153,7 +153,20 @@
     console.log(C >> 1) // -1 
     console.log(C >>> 1) // 2147483647
 
+    /* 位运算符在 JavaScript 中的妙用 */
 
+    /** 使用 & 运算符判断一个数的奇偶
+    * 偶数 & 1 = 0
+    * 奇数 & 1 = 1
+    * 
+    * 偶数二进制最后一位都为0，奇数最后一位都为1。
+    * 1 的二进制表示为 0b01
+    */
+     
+    // 10 0b1010
+    console.log(10 & 1) // 0
+    // 9 1001
+    console.log(9 & 1) // 1
 
     /** 位运算在权限系统中的使用
      * 传统的权限系统里，存在很多关联关系，如用户和权限的关联，用户和角色的关联。
