--- a/bitOperators/index.html
+++ b/bitOperators/index.html
@@ -199,7 +199,25 @@
 
     // `通过用户权限 & 权限 code === 权限 code` 就可以判断出用户是否拥有该权限。
 
+    // 删除权限(执行 &(~code)) 先取反，再执行与操作。
 
+    // 删除 l 权限
+    const delL = userAllAccess & (~l) // 3 0b011
+    console.log((delL & l) === l) // false
+    console.log((delL & m) === m) // true
+    console.log((delL & n) === n) // true
+
+    // 删除 m 权限
+    const delM = userAllAccess & (~m) // 5 0b101
+    console.log((delM & l) === l) // true
+    console.log((delM & m) === m) // false
+    console.log((delM & n) === n) // true
+    
+    // 删除 n 权限
+    const delN = userAllAccess & (~n) // 6 0b110
+    console.log((delN & l) === l) // true
+    console.log((delN & m) === m) // true
+    console.log((delN & n) === n) // false
 
 
 
